<resources>
    <string name="app_name">PROJECT_CBT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="therapist_email">Therapist email:</string>
    <string name="event_list">Event List</string>
    <string name="panic_attack_example">Panic attack (example)</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="send_all">Send all</string>
    <string name="attack_example">Panic attack (example)</string>
    <string name="automatic_thoughts">Automatic Thoughts</string>
    <string name="cognitive_distortion">Cognitive Distortion</string>
    <string name="settings">Settings</string>
    <string name="helpful_thoughts">Helpful Thoughts</string>
    <string-array name="emotions">
        <item name="fear">fear</item>
        <item name="panic">panic ></item>
        <item name="helplessness">helplessness</item>
        <item name="sad">sad</item>
    </string-array>
    <string name="behavior">Behavior</string>
    <string name="personal_notes">Personal Notes</string>
    <string name="send">Send</string>
    <string name="information">Information</string>
    <string name="helpful_behavior">Helpful Behavior</string>
    <string name="ineffective_bahavior">Ineffective Bahavior</string>
    <string name="text_notes">Text Notes</string>
    <string name="recordings">Recordings</string>
    <string name="fear">fear</string>
    <string name="title_for_new_event">Title for New Event</string>
    <string name="ok">OK</string>
    <string name="_0">0%</string>
    <string name="panic">panic</string>
    <string name="end_event">End Event</string>
    <string name="helplessness">helplessness</string>
    <string name="add_helpful_throught">Add Helpful Throught</string>
    <string name="add_text_notes">Add Text Notes </string>
    <string name="add_automatic_throught">Add Automatic Throught</string>
    <string name="add_helpful_behavior">Add Helpful Behavior</string>
    <string name="add_emotion">Add Emotion</string>
    <string-array name="text_not">
        <item name="notes">letter to my self</item>
    </string-array>
    <string-array name="letter_to_my_self">
        <item name="letter_first">I wrote this letter for this very moment.\n Although all seems doomed now, I am\n prepared to cope with this unpleasant\n experience and realize that what i feel\n is temporary. Occasionally my brain \n triggers the survival alert although\n there is no real threat. Trying to \n counter attack the panic will end up \n with more stress and stimulation which\n isn\'t effective. The symptoms and \n tricks of anxiety are known to me. I also\n realize that helpful thoughts or breathing will not make anxiety\n disappear, but they may reduce it and\n promote a faster resolution. Note to\n oneself: regardless of its    \n unpleasantness, do not fear the experience of anxiety. Read the \n thoughts that help and practice\n mindfulness as learned in therapy\n sessions.  </item>
    </string-array>
    <string-array name="authomatic">
        <item name="i_crazy">I\'m going crazy</item>
        <item name="i_must_gain_control">I must gain control</item>
        <item name="i_can">I can\'t breath</item>
        <item name="i_defected">I\'m defected</item>
        <item name="i_can_stand_it">I can\'t stand it</item>
    </string-array>
    <string-array name="helpful_thuog">
        <item name="this_is_just">this is just a fault alert</item>
        <item name="it_is_very_frightening">it is very frightening but not dangerous</item>
        <item name="i_survived">I survived similar experiences in the past</item>
        <item name="i_feel_terrible">I feel terrible but can handle it </item>
        <item name="i_will_feel">I will feel better in 45 minutes </item>
    </string-array>
    <string-array name="helpful_behr">
        <item name="deep_breath">deep breath and slow exhalation</item>
        <item name="listen">listen and recording I\'ve prepared </item>
        <item name="call_a">call a supportive friend</item>
        <item name="grounding">grounding exercise</item>
        <item name="read">read helpful thoughts</item>
    </string-array>
    <string-array name="ineffective_beh">
        <item name="go_to">go to hospital</item>
        <item name="sit_on">sit on bed and wait for the attack to pass</item>
    </string-array>
    <string-array name="button_info">
        <item name="what_is_cbtwithyou">What is CBTwithyou</item>
        <item name="how_to_use">How to use CBTwithyou for real time assistance</item>
        <item name="to_define">CBTwithyou - How to define an event and enter content</item>
        <item name="cognitive_behavioral">What is Cognitive Behavioral Therapy(CBT)</item>
        <item name="thought_distortions">Thought Distortions</item>
        <item name="about">About</item>
    </string-array>
    <string name="edit_text_note">Edit Text Note</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="events_report">Events report</string>
    <string name="sendMail">Send</string>
    <string name="cancel">Cancel</string>
</resources>