<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProject"
    android:orientation="vertical"
    tools:context=".activity.PanicActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/PanicEx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/panic_attack_example"
            android:textColor="@color/colorText"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAutomatic"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_button_left_1"
            android:text="@string/automatic_thoughts"
            android:textAllCaps="false"
            android:textColor="@color/colorProject" />

        <Button
            android:id="@+id/btnDistortion"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_buttom_right_1"
            android:text="@string/cognitive_distortion"
            android:textAllCaps="false"
            android:textColor="@color/colorProject" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHelpful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/not_color"
            android:drawablePadding="15dp"
            android:drawableTop="@drawable/button_new_u"
            android:text="@string/helpful_thoughts"
            android:textAllCaps="false"
            android:textColor="@color/audio_bg_3" />

        <Button
            android:id="@+id/btnEmotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/not_color"
            android:drawablePadding="15dp"
            android:drawableTop="@drawable/button_emotion_u"
            android:text="@string/emotions"
            android:textAllCaps="false"
            android:textColor="@color/audio_bg_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBehavior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@color/not_color"
            android:drawablePadding="15dp"
            android:drawableTop="@drawable/button_behavior_u"
            android:text="@string/behavior"
            android:textAllCaps="false"
            android:textColor="@color/audio_bg_3" />

        <Button
            android:id="@+id/btnNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@color/not_color"
            android:drawablePadding="15dp"
            android:drawableTop="@drawable/button_note_u"
            android:text="@string/personal_notes"
            android:textAllCaps="false"
            android:textColor="@color/audio_bg_3" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEnd"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_button_left_2"
            android:text="@string/end_event"
            android:textAllCaps="false"
            android:textColor="@color/audio_vis_mask"

            />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_buttom_right_2"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/colorProject" />
    </LinearLayout>

</LinearLayout>

