<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProject"
    android:orientation="vertical"
    tools:context="com.avi.project_cbt.adapter.SimpleEMail">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorLayout">
        <TextView
            android:id="@+id/emailsendcancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="left|center"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:textColor="@color/audio_fg_3" />
        <TextView
            android:id="@+id/txtMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/events_report"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailsendbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="right|center"
            android:textSize="16sp"
            android:text="@string/sendMail"
            android:textColor="@color/button_clipped_b_3" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/to"
    android:textColor="@color/text_field_border"
    android:id="@+id/emailaddress"
    android:layout_weight="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textColor="@color/text_field_border"
        android:id="@+id/emailsubject"
        android:layout_weight="1"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:id="@+id/scrollView" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:textColor="@color/text_field_border"
                android:id="@+id/emailtext"
                android:layout_weight="1"/>
        </ScrollView>

    </LinearLayout>
</LinearLayout>
