<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/not_color"
    android:layout_marginTop="15dp"
    tools:context=".fragment.AddEventFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_layout_emotion"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/edit_text_note"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_title"/>

            <EditText
                android:layout_width="220dp"
                android:layout_height="120dp"
                android:id="@+id/ETNote"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/corners_text_notes"
                android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/ok"
                android:id="@+id/btnDoneTitleNote"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorText"
                android:background="@drawable/border_button_l"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/back"
                android:id="@+id/btnCancelTitleNote"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_title"
                android:textAllCaps="false"
                android:background="@drawable/border_button_r"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
