<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EventActivity"
    android:orientation="vertical"
    android:background="@color/colorProject">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:id="@+id/txtHistory"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/gradient3">
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@drawable/gradient_layout"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
           >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:id="@+id/btnBack2"
                        android:text="@string/back"
                        android:textAllCaps="false"
                        android:textColor="#d6e3ea"
                        android:background="@drawable/gradient_button_u"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:id="@+id/btnSend"
                        android:text="@string/send_all"
                        android:textAllCaps="false"
                        android:textColor="#d6e3ea"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/gradient_button_u"
                        />
                </LinearLayout>
        </RelativeLayout>
</LinearLayout>

