<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InfoActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLayout"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_note"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="left"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_notes"
                android:id="@+id/txtNotes"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_green_u"
                android:id="@+id/btnEditNotes"
                android:background="@color/not_color"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/btnRecor"
                android:text="@string/recordings"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:background="@drawable/gradient_button_d"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

             />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/btnTxtNotes"
                android:text="@string/text_notes"
                android:textAllCaps="false"
                android:textColor="@color/cardview_light_background"
                android:textSize="14sp"
                android:background="@drawable/gradient_button_u"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
        <com.avi.project_cbt.adapter.VisualizerView
            android:id="@+id/visualizerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/gradient_recording"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgRecordings"
            android:src="@drawable/microphone_u"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@color/not_color"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/recyclerRecord"
        android:background="@drawable/gradient3"
        >

    </android.support.v7.widget.RecyclerView>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@drawable/gradient_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical">

        <Button
            android:layout_width="355dp"
            android:layout_height="30dp"
            android:id="@+id/btnBackNotes"
            android:background="@drawable/gradient_button_u"
            android:layout_gravity="center_horizontal"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="#d6e3ea"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            />
    </LinearLayout>
</LinearLayout>